--- a/app/src/main/res/layout/fragment_meal_planning.xml
+++ b/app/src/main/res/layout/fragment_meal_planning.xml
@@ -1,170 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".meal_planning">
 
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="384dp"
-        android:layout_height="376dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="70dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="133dp"
-        android:layout_marginTop="3dp"
-        android:backgroundTint="#E6E6FA"
-        android:text="Add new meal plan"
-        android:textColor="#000000"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="5dp"
-        android:text="History"
-        android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+            <CalendarView
+                android:id="@+id/calendarView"
+                android:layout_width="384dp"
+                android:layout_height="322dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="0dp" />
 
-    <androidx.gridlayout.widget.GridLayout
-        android:layout_width="411dp"
-        android:layout_height="191dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14">
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="133dp"
+                android:layout_marginTop="0dp"
+                android:backgroundTint="#E6E6FA"
+                android:text="Add new meal plan"
+                android:textColor="#000000"
+                android:textSize="10sp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_width="113dp"
-            android:layout_height="95dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="5dp">
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="27dp"
+                    android:layout_marginTop="5dp"
+                    android:text="History"
+                    android:textColor="#000000" />
 
                 <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="17dp"
-                    android:layout_height="17dp"
-                    android:background="#00FFFFFF"
-                    android:padding="3dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_2"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+                    android:id="@+id/imageButton2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="275dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_baseline_clear_all_24" />
+            </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="49dp"
-                    android:layout_height="16dp"
-                    android:gravity="center"
-                    android:text="Wed, 5th"
-                    android:textColor="#000000"
-                    android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView7" />
-
-                <ImageView
-                    android:id="@+id/imageView7"
-                    android:layout_width="103dp"
-                    android:layout_height="74dp"
-                    android:src="@drawable/img_1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView15"
-                    android:layout_width="103dp"
-                    android:layout_height="36dp"
-                    android:background="@drawable/listgrad"
-                    android:gravity="bottom|center_horizontal"
-                    android:text="Fried Chicken"
-                    android:textColor="#FFFFFF"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView7"
-                    app:layout_constraintStart_toStartOf="@+id/imageView7" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView1"
-            android:layout_width="113dp"
-            android:layout_height="95dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/RVAddMeal"
+                android:layout_width="370dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="5dp">
 
-                <ImageButton
-                    android:id="@+id/imageButton1"
-                    android:layout_width="17dp"
-                    android:layout_height="17dp"
-                    android:background="#00FFFFFF"
-                    android:padding="3dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/img_2"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="49dp"
-                    android:layout_height="16dp"
-                    android:gravity="center"
-                    android:text="Thu, 6th"
-                    android:textColor="#000000"
-                    android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView8" />
-
-                <ImageView
-                    android:id="@+id/imageView8"
-                    android:layout_width="103dp"
-                    android:layout_height="74dp"
-                    android:src="@drawable/img_16"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="103dp"
-                    android:layout_height="36dp"
-                    android:background="@drawable/img_15"
-                    android:gravity="bottom|center_horizontal"
-                    android:text="Pepperoni Pizza"
-                    android:textColor="#FFFFFF"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"
-                    app:layout_constraintStart_toStartOf="@+id/imageView8" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
-    </androidx.gridlayout.widget.GridLayout>
+                tools:listitem="@layout/individual_item_view" />
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
