--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -172,10 +172,11 @@
         android:id="@+id/imageView5"
         android:layout_width="397dp"
         android:layout_height="305dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="4dp"
         android:elevation="-5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/spatula"
-        tools:layout_editor_absoluteY="213dp" />
+        app:layout_constraintTop_toBottomOf="@+id/CB_food"
+        app:srcCompat="@drawable/spatula" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
