--- a/app/src/main/res/layout/insertcarrdview.xml
+++ b/app/src/main/res/layout/insertcarrdview.xml
@@ -8,7 +8,8 @@
     android:layout_margin="4dp"
     android:outlineProvider="background"
     app:cardBackgroundColor="@color/white"
-    app:cardElevation="8dp">
+    app:cardElevation="8dp"
+    app:cardCornerRadius="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
